Acrescentado, salvar uma nova versão

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> Página de vendas </h1>
+    <p>Salvar uma nova verão do projeto</p>
     <a href="index.html"> voltar para a página de inicial</a>
 </body>
 </html>
